--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ num_cpus = "1.17.0"
 sled = "0.34"
 serde = { version = "1.0", features = ["derive"] }
 bincode = "2.0.1"
-uuid = { version = "1", features = ["v4"] }  # 使用 UUID v4（随机）
+uuid = { version = "1", features = ["v4"] }
+serde_json = "1.0.140"  # 使用 UUID v4（随机）
