--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,12 @@ actix-web = "4"
 env_logger = "0.11"
 log = "0.4"
 ssh2 = "0.9"
-crossbeam = "0.8"
 num_cpus = "1.17.0"
 sled = "0.34"
 serde = { version = "1.0", features = ["derive"] }
 bincode = "2.0.1"
 uuid = { version = "1", features = ["v4"] }
 serde_json = "1.0.140"
-
-
+tokio = { version = "1", features = ["full"] }
+async-ssh2-lite= { version = "0.5.0",features = ["tokio"] }
+futures-util = "0.3"
