--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ serde_json = "1.0.140"
 tokio = { version = "1", features = ["full"] }
 async-ssh2-lite= { version = "0.5.0",features = ["tokio"] }
 futures-util = "0.3"
+dotenvy = "0.15"
